tests/__snapshots__/directive-fixme-stderr.snap.txt
Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  1 | import { expect, test } from "tstyche";
  2 | 
  3 | // @tstyche fixme -- Consider removing the directive
    | ~~~~~~~~~~~~~~~~~
  4 | expect<string>().type.toBe<string>();
  5 | 
  6 | // @tstyche fixme -- Known bug, see: #345

      at ./__typetests__/directive-fixme.tst.ts:3:1

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  14 | 
  15 | test("is number?", () => {
  16 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  17 |   expect<number>().type.toBe<number>();
  18 | 
  19 |   // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:16:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  24 | // @tstyche fixme
  25 | test("is fixme?", () => {
  26 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  27 |   expect<number>().type.toBe<number>();
  28 | 
  29 |   // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:26:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  41 | test("is number?", () => {
  42 |   expect<number>().type.toBe<number>();
  43 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  44 |   expect<number>().type.toBe<number>();
  45 | });
  46 | 

       at ./__typetests__/directive-fixme.tst.ts:43:3

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  38 | });
  39 | 
  40 | // @tstyche fixme -- Consider removing the directive
     | ~~~~~~~~~~~~~~~~~
  41 | test("is number?", () => {
  42 |   expect<number>().type.toBe<number>();
  43 |   // @tstyche fixme -- Consider removing the directive

       at ./__typetests__/directive-fixme.tst.ts:40:1

